--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Noah Creatives Agency</title>
   </head>
   <body>
+   
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script async data-uid="5e17be0240" src="https://noah-creatives-agency.kit.com/5e17be0240/index.js"></script>
   </body>
 </html>
