--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/dd7db20368103cc43efa0a882/a5db1251529cfcdcad431c01d.js");</script>
+   
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link  rel="shortcut icon" href="./src/assets/ark.png" type="image/x-png">
+    <link  rel="shortcut icon" href="./src/assets/ncalogoo.png" type="image/x-png">
     <title>Noah Creatives Agency</title>
   </head>
   <body>
