--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link  rel="shortcut icon" href="./src/assets/ncalogoo.png" type="image/x-png">
+    <link  rel="shortcut icon" href="./src/assets/nca1.png" type="image/x-png">
     <title>Noah Creatives Agency</title>
    
   </head>
